# dolphin_slam_gazebo

./: README.md  error  start_dolphin_enhanced.sh  start_dolphin_slam_optimized.sh  start_dolphin_slam_ultimate.sh
src/dolphin_slam/: CMakeLists.txt  LICENSE.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py  setup.py.backup
src/dolphin_slam/config/: camera_calibration.yaml  custom_rosconsole.conf  dolphin_slam_params.yaml  dolphin_slam_sim_params.yaml
src/dolphin_slam/dolphin_slam/: dataset_player_node.py  enhanced_experience_map_node.py  experience_map_node.py  image_processing_node.py  image_sync_node.py  local_view_cells.py  local_view_node.py  place_cell_network.py  place_cell_node.py  robot_state.py  robot_state.py.20250630_141143.backup  robot_state.py.backup  robot_state.py.patch  simple_odom_publisher_node.py  system_stop_monitor.py  unified_data_controller.py  utils.py
src/dolphin_slam/launch/: dolphin_slam_launch.py  dolphin_slam_launch.py.backup  dolphin_slam_sim_launch.py  gazebo_headless_test_launch.py  simple_test_launch.py
src/dolphin_slam/msg/: Descriptors.msg  ExperienceEvent.msg  LocalViewMatch.msg  PlaceCellActivity.msg  RobotOdometry.msg
src/dolphin_slam/nodes/: experience_map_node.py  experience_map_node.py.backup  image_processing_node.py  local_view_node.py  local_view_node.py.20250630_141143.backup  place_cell_node.py  place_cell_node.py.backup  robot_state_node.py  robot_state_node.py.20250630_141143.backup  robot_state_node.py.backup_20250702_190051
src/dolphin_slam/rviz/: dolphin_slam.rviz  dolphin_slam_enhanced.rviz  dolphin_slam_optimized.rviz  dolphin_slam_simple.rviz
src/dolphin_slam/scripts/: analyze_dataset.py.backup  clear_trajectory.py  comprehensive_fix_script.py  data_validation_script.py  dataset_diagnostics.py  deploy_script.sh  dolphin_slam_fix.py  dolphin_slam_fix_script.py  final_fix_script.py  fix_robot_state.sh  force_clear_trajectory.py  run_dolphin_slam.sh  rviz_fix_script.sh  slam_monitor.py  system_checker.sh  verified_dolphin_slam_params.yaml  visualize_results.py
src/dolphin_slam/srv/: ImageRequest.srv  LoadMap.srv  ResetSLAM.srv  SaveMap.srv
src/dolphin_slam/test/: test_experience_map.py  test_image_processing.py  test_place_cell_network.py
src/dolphin_slam/urdf/: auv_robot.xacro
(+48 files in other folders)
